--- a/legal-chat-backend/environment.yml
+++ b/legal-chat-backend/environment.yml
@@ -7,3 +7,7 @@ dependencies:
   - flask=3.0.0
   - flask-cors=4.0.0
   - pip 
+  - python-dotenv 
+  - langchain 
+  - langchain-openai
+  - reportlab
